[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-jwt-lite"
version = "0.2.0"
description = "Minimal JWT creation and validation with zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["jwt", "token", "authentication", "security", "hmac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-jwt-lite#readme"
Repository = "https://github.com/philiprehberger/py-jwt-lite"
Issues = "https://github.com/philiprehberger/py-jwt-lite/issues"
Changelog = "https://github.com/philiprehberger/py-jwt-lite/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_jwt_lite"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
